force-app/main/default/objects/Import_Enquiry__c.object
<CustomObject>
    <description>Use this object to create new enquiries in bulk with related records</description>
    <fields>
        <fullName>Batch_Reference__c</fullName>
        <description>Reference number for data load for grouping purpose</description>
        <label>Batch Reference</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id_Source__c</fullName>
        <description>Contact Id source</description>
        <label>Contact Id Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <description>Contact Unique Id</description>
        <label>Contact Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Category_Level_1__c</fullName>
        <description>Maps to: Enquiry Category Level 1</description>
        <label>Enquiry Category Level 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Description__c</fullName>
        <description>Maps to: Enquiry Description</description>
        <label>Enquiry Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enquiry_Group__c</fullName>
        <description>Maps to Enquiry Group</description>
        <label>Enquiry Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Origin__c</fullName>
        <description>Maps to Enquiry Origin</description>
        <label>Enquiry Origin</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Owner__c</fullName>
        <description>Maps to Enquiry Owner Id</description>
        <inlineHelpText>Make sure this is a UniCRM User Id</inlineHelpText>
        <label>Enquiry Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Status__c</fullName>
        <description>Maps to Enquiry Status</description>
        <label>Enquiry Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Subject__c</fullName>
        <description>Maps to Enquiry Subject</description>
        <label>Enquiry Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Type__c</fullName>
        <description>Maps to Enquiry Type</description>
        <label>Enquiry Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Date_Id__c</fullName>
        <description>Unique Id to find Key Date</description>
        <label>Key Date Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Date_Source__c</fullName>
        <description>Source for Key Date Id</description>
        <label>Key Date Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id_Source__c</fullName>
        <description>Source for searching the opportunity Id</description>
        <label>Opportunity Id Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <description>Unique Id to search related opportunity</description>
        <label>Opportunity Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Log__c</fullName>
        <description>Process Log for this record</description>
        <label>Record Log</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Record status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Import Enquiry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Batch_Reference__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Record_Log__c</columns>
        <columns>Enquiry_Subject__c</columns>
        <columns>Enquiry_Type__c</columns>
        <columns>Enquiry_Category_Level_1__c</columns>
        <columns>Enquiry_Origin__c</columns>
        <columns>Enquiry_Status__c</columns>
        <columns>Enquiry_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <listViews>
        <fullName>MRO_Failed_Records</fullName>
        <columns>NAME</columns>
        <columns>Batch_Reference__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Record_Log__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Import_Enquiry__c.MRO</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>MRO Failed Records</label>
        <sharedTo>
            <group>Monash_Research_Office</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>test</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Batch_Reference__c</columns>
        <columns>Record_Log__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Enquiry_Subject__c</columns>
        <columns>Enquiry_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Import_Enquiry__c.MRO</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>7/1/2024 12:00 AM</value>
        </filters>
        <filters>
            <field>Enquiry_Category_Level_1__c</field>
            <operation>equals</operation>
            <value>Reports</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Success</value>
        </filters>
        <label>MRO Import Enquiries - NEW Status</label>
        <sharedTo>
            <group>MRO_Awards</group>
            <group>Sys_Admin</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Imp{00000}</displayFormat>
        <label>Import Enquiry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Import Enquiries</pluralLabel>
    <recordTypes>
        <fullName>MRO</fullName>
        <active>true</active>
        <description>Monash Research Office</description>
        <label>MRO</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>